--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10821,7 +10821,7 @@ a.text-dark:focus {
 
 #search-box {
   display:table;
-  margin:500px auto 0px auto;
+  margin:500px 40% 0px auto;
   width:600px;
   height:auto;
   border-radius:10px 10px;
@@ -10834,7 +10834,7 @@ a.text-dark:focus {
 #search-box:hover {
   box-shadow: 3px 3px 5px #cccccc;
   display:table;
-  margin:500px auto 0px auto;
+  margin:500px 40% 0px auto;
   width:600px;
   height:auto;
   border-radius:10px 10px;
@@ -10844,14 +10844,13 @@ a.text-dark:focus {
 }
 
 #search-button {
-  /* background:url("../../img/search.png"); */
   background-repeat: no-repeat;
-  display:flex;
-  margin:-62px 23.5% 0px auto;
+  display:table;
+  margin:-62px 29% 0px auto;
   width:200px;
   height:62px;
   border-radius:10px 10px;
-  font-size:15px;
+  font-size:30px;
 }
 
 
