--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10820,38 +10820,34 @@ a.text-dark:focus {
   margin:auto;
 }
 
+.form-box {
+  width: 70vw;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  margin : 0 auto;
+}
+
+
 #search-box {
-  display:table;
-  margin:500px 40% 0px auto;
-  width:600px;
+  width:70%;
   height:auto;
-  border-radius:10px 10px;
   font-size:35px;
   text-indent:15px;
   outline: none;
+  border-right: 0;
 }
 
 #search-box:focus,
 #search-box:hover {
   box-shadow: 3px 3px 5px #cccccc;
-  display:table;
-  margin:500px 40% 0px auto;
-  width:600px;
-  height:auto;
-  border-radius:10px 10px;
-  font-size:35px;
-  text-indent:15px;
-  outline: none;
 }
 
 #search-button {
   background-repeat: no-repeat;
-  display:table;
-  margin:-62px 29% 0px auto;
-  width:200px;
-  height:62px;
-  border-radius:10px 10px;
-  font-size:30px;
+  width:25%;
+  height:100%;
+  font-size: 900;
 }
 
 
@@ -10865,8 +10861,7 @@ a.text-dark:focus {
   outline: none;
 }
 
-#youTubePlayer1 {position:relative;width:100%;padding-bottom:56.25%;}
-#youTubePlayer1 iframe {position:absolute;width:100%;height:100%;}
+
 /*--------------------------------------------------*/
 
 @media print {
