download & loggin clear

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,62 +1,32 @@
-body {
-    background: #2ecc71;
-    font-size: 62.5%;
-  }
-  
-  button,
-  button::after {
-    -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-      transition: all 0.3s;
-  }
-  
-  button {
-    background: none;
-    border: 3px solid #fff;
-    border-radius: 5px;
-    color: #fff;
-    display: block;
-    font-size: 1.6em;
-    font-weight: bold;
-    margin: 1em auto;
-    padding: 2em 6em;
-    position: relative;
-    text-transform: uppercase;
-  }
-  
-  button::before,
-  button::after {
-    background: #fff;
-    content: '';
-    position: absolute;
-    z-index: -1;
-  }
-  
-  .button:hover {
-    color: #2ecc71;
-  }
-  
-  /* BUTTON 5 */
-  .btn-5 {
-    overflow: hidden;
-  }
-  
-  .btn-5::after {
-    /*background-color: #f00;*/
-    height: 100%;
-    left: -35%;
-    top: 0;
-    transform: skew(50deg);
-    transition-duration: 0.6s;
-    transform-origin: top left;
-    width: 0;
-  }
-  
-  .btn-5:hover:after {
-    height: 100%;
-    width: 135%;
-  }
-  /* youtube플레이어 화면에 꽉차게 하는 css */
-    #youTubePlayer1 {position:relative;width:100%;padding-bottom:56.25%;}
-    #youTubePlayer1 iframe {position:absolute;width:100%;height:100%;}
+.donwload {
+    display: flex;
+    flex-flow: column;
+    margin-top:10px;
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    height: 3em;
+    margin-top:10px;
+}
+.setCenter {
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+}
+.converting {
+    display: none;
+    text-align: center;
+    font-size: 4em;
+}
+.setCenter button{
+    width:40%;
+    height:100%;
+}
+
+#downloadBtn {
+    border: 10px solid gray;
+    color : black;
+    text-decoration: none;
+}
